Add first draft of CV and Covering letter.

--- a/aber/proffesional_issues/slj11_curriculum_vitae.tex
+++ b/aber/proffesional_issues/slj11_curriculum_vitae.tex
@@ -23,6 +23,7 @@
       \setlength{\topsep}{0in} \setlength{\partopsep}{0in}
       \setlength{\leftmargin}{0.2in}}}{\end{list}}
 
+\renewcommand{\familydefault}{\sfdefault}
 
 \begin{document}
 
@@ -31,69 +32,61 @@
 \begin{resume}
 \section{\sc Contact Information}
 \vspace{.05in}
-\begin{tabular}{@{}p{2in}p{4in}}
-54 Rhosendre, Waun Fawr,             & {\it Tel:}  07895 318714 \\
-Aberystwyth, SY23 3PU & {\it E-mail:}  slj11@aber.ac.uk\\
- & {\it Website:} samueljackson.me
+\begin{tabular}{@{}p{2in}p{2in}p{2in}}
+54 Rhosendre, Waun Fawr,             & {\it Tel:}  07895 318714 & {\it Twitter}: @sljack92 \\
+Aberystwyth, SY23 3PU & {\it E-mail:}  slj11@aber.ac.uk & {\it Website:} samueljackson.me \\
 \end{tabular}
 
 \section{\sc Profile}
-I am a fourth year undergraduate software engineering student at Aberystwyth university. I have already completed two years of my undergraduate with an average of a first. I have also recently finished an industrial placement year as a software engineering at the Science and Technology Facilities Council. In this role worked as part of an international development team to build a cutting edge data analysis application. I am now six months into the fourth year of my degree and have just started working on my dissertation project involving mammogram image analysis.
+I am a fourth year undergraduate software engineering student at Aberystwyth university. I have already completed two years of my undergraduate with an average of a first. I have also recently finished an industrial placement year as a software engineer at the Science and Technology Facilities Council. In this role worked as part of an international development team to build a cutting edge data analysis application. I am now six months into the fourth year of my degree and have just started working on my dissertation project involving mammogram image analysis.
 
 \section{\sc Key Skills}
 
-{\bf Communication} 
+{\bf Communication}: During my industrial placement I worked daily with customers who were technical experts in their field to realise their computing needs. As a practical demonstrator it was important to communicate technical content clearly with people who are less knowledgeable than myself. My experience as a student ambassador and staff-student committee member taught me to communicate ideas and opinion effectively to both staff and students.
 
-\begin{itemize}
-\item During my industrial placement I worked daily with customers who were technical experts in their field to realise their computing needs. 
-\item As a practical demonstrator it was important to communicate technical content clearly with people who are less knowledgeable than myself. 
-\item My experience as a student ambassador and staff-student committee member taught me to communicate ideas and opinion effectively to both staff and students.
-\end{itemize}
+{\bf Teamwork}: I've recently worked as part of a international, multi-skilled development team as part of my industrial placement. During my time I worked on many different projects involving different subsets of the team each with different skills and domain knowledge meet the project's goals. I completed a major group project as part of my degree which simulated a real world project where I took on the role of lead developer. I was successfully able to orchestrate the team to build a work end product.
 
-{\bf Teamwork}
-\begin{itemize}
-\item I've recently worked as part of a international, multi-skilled development team as part of my industrial placement. During my time I worked on many different projects involving different subsets of the team each with different skills and domain knowledge meet the project's goals. 
-\item I completed a major group project as part of my degree which simulated a real world project where I took on the role of lead developer. I was successfully able to orchestrate the team to build a work end product.
-\end{itemize}
+{\bf Planning and Organisation:} On my placement year I was responsible for collaborating with customers on the design and implementation of an entire section of the project. I also responsible for redesigning one of the core features of the system, from requirements analysis through to implementation.
 
-{\bf Planning and Organisation:} 
-\begin{itemize}
-\item On my placement year I was responsible for collaborating with customers on the design and implementation of an entire section of the project. 
-\item I also responsible for redesigning one of the core features of the system, from requirements analysis through to implementation.
-\end{itemize}
-
-{\bf Technical Knowledge:} 
-\begin{itemize}
-\item IY project was primarily written in C++ and my university's group project module was a Java web application using a MySQL database. 
-\item During this year I create a RESTful client application from scratch for an internet applications assignment.
-\end{itemize} 
+{\bf Technical Knowledge:} IY project was primarily written in C++ and my university's group project module was a Java web application using a MySQL database. During this year I create a RESTful client application from scratch for an internet applications assignment.
 
 \section{\sc Education}
-{\bf University of Aberystwyth}, Ceredigion, Wales, UK\\
+{\bf University of Aberystwyth}\\
+{\it Ceredigion, Wales, UK} \hfill {\it September 2011 - Present}\\
 MEng. Software Engineering, September 2011 (expected graduation date: June 2016)
 
 Key Modules:
-\begin{itemize}
+\begin{list2}
 
 \item C, C++ and Java Programming (86\%)
 \item Program Design, Data Structures and Algorithms (88\%)
 \item Modelling Persistent Data (96\%)
 \item Web Development Tools (94\%)
 \item Developing Internet Based Applications (Result Pending)
-\end{itemize}
+\end{list2}
+
+{\bf New College}\\
+{\it Swindon, Wiltshire, UK} \hfill {\it September 2008 - June 2011}
+\begin{list2}
+\item BTEC National Diploma in Software Engineering: Triple Distinction
+\item Business Studies A Level: B
+\item Computing AS Level: B
+\item Biology AS Level: B
+\end{list2}
+
+{\bf Dorcan Technology Collage}, Swindon, Wiltshire, UK \hfill {\it September 2003 - June 2008}\\
+10 GCSE's grades A*-C including Maths grade A and English grade A.
 
 \section{\sc Professional Experience}
-{\bf Software Developer, STFC}, Rutherford Appleton Laboratory, Harwell, Oxfordshire, UK
+{\bf Software Developer, STFC} \\
+{\it Rutherford Appleton Laboratory, Harwell, Oxfordshire, UK}  \hfill {\it July, 2013 - August, 2014}
 
-\vspace{-.3cm}
-{\em Year in Industry} \hfill {\bf July, 2013 - August, 2014}\\
 I have recently been employed as a software developer for ISIS Neutron source based at Rutherford Appleton Laboratory in Harwell, Oxfordshire to develop the Mantid neutron and muon data analysis application. This project was primarily written in C++ and Python. I was primarily responsible for the development of the framework for indirect geometry instruments, but also helped develop the general framework during my time with the project. I was involved with every step of the development process from requirements gathering to design, through to implementation, testing, and maintenance. My original contract was extended so I could continue working through the summer before university began.
 
-{\bf Practical Demonstrator, University of Aberystwyth}, Aberystwyth, Ceredigion, Wales, UK
+{\bf Practical Demonstrator, University of Aberystwyth} \\
+{\it Aberystwyth, Ceredigion, Wales, UK} \hfill {\it  October, 2012 - June, 2013, September 2014 - Present}
 
-\vspace{-.3cm}
-\hfill {\bf  October, 2012 - June, 2013, September 2014 - Present}\\
-I am currently employed as a practical demonstrator for Aberystwyth University. This position involves being on hand during first and second year advanced programming practical sessions to help students with any problems they might have with their worksheets and assignments and signing off on the completed worksheets. I primarily helped with practical sessions teaching Java, C++, C and Haskell.
+I am currently employed as a practical demonstrator for Aberystwyth University helping to teach Java, C++, C and Haskell. This position sharpens my communication and technical skills as I must be able to confidently pass on my knowledge to others and explain complicated concepts clearly.
 
 \section{\sc Honors and Awards}
 Glyn Emery prize for best first year student, University of Aberystwyth, 2012.
@@ -108,26 +101,24 @@ Glyn Emery prize for best first year student, University of Aberystwyth, 2012.
 \end{list2}
 
 \section{\sc Volunteering}
-{\bf Student-Staff Consultative Committee Member, University of Aberystwyth}, Aberystwyth, Ceredigion, UK
-\vspace{-.3cm}
+{\bf Student-Staff Consultative Committee Member} \\
+{\it University of Aberystwyth, Aberystwyth, Ceredigion, UK} \hfill {\it September 2014 - Present}
 
-\hfill {\bf September 2014 - Present}\\
 Since my return to Aberystwyth I have volunteered to be a member of the staff-student consultative committee. This position has involved attending and contributing to regular committee meetings and aiding with student drop in sessions.
 
-{\bf Student Ambassador, University of Aberystwyth}, Aberystwyth, Ceredigion, UK
+{\bf Student Ambassador}\\ 
+{\it University of Aberystwyth, Aberystwyth, Ceredigion, UK} \hfill {\it August 2012 - Present}
 
-\vspace{-.3cm}
-\hfill {\bf July, 2012 - June, 2013, September 2014 - Present}\\
 I am currently volunteering to be an open day and visit day ambassador for the university. The role requires me to talk to prospective students and their families about what it is like to live and study in Aberystwyth. I am also responsible for giving tours of the computer science department and helping to get prospective students to talks and interviews conducted by the department on time.
 
 \section{\sc Interests}
-In my free time I enjoy reading 
+In my free time I enjoy reading (mostly classics and science fiction) and playing tennis and squash. During my industrial year I got involved with the department's Aunt Sally team where we won the cup.
 
 \section{\sc References}
-Dr. Reyer Zwiggelaar, Tutor, rrz@aber.ac.uk \\
-{\em Director of Computer Science Research, University of Aberystwyth, Aberystwyth, Ceredigion, UK}
+Prof. Reyer Zwiggelaar, rrz@aber.ac.uk \\
+{\em Director of Research, IMPACS, University of Aberystwyth, Aberystwyth, Ceredigion, UK}
 
-Mr. Nick Draper, Mantid Project Manager, nick.draper@stfc.ac.uk \\
+Mr. Nick Draper, nick.draper@stfc.ac.uk \\
 {\em Mantid Project Manager, Rutherford Appleton Laboratory, Harwell, Oxfordshire, UK}
 
 \end{resume}
