--- a/aber/proffesional_issues/Moderncv Classic/main.tex
+++ b/aber/proffesional_issues/Moderncv Classic/main.tex
@@ -49,7 +49,7 @@
 %-----       letter       ---------------------------------------------------------
 % recipient data
 \recipient{Company Recruitment team}{Company, Inc.\\123 somestreet\\London}
-\date{January 01, 1984}
+\date{\today}
 \opening{Dear Sir or Madam,}
 \closing{Yours faithfully,}
 \enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
@@ -57,9 +57,11 @@
 
 I am responding to the advertisement for a graduate Java developer position in your start-up company. Please find attached a copy of my resume for your consideration.
 
-I am a final year student who has all the skills you are looking for in your application. My degree has furnished me with a wide variety of technical knowledge, a high level of self-motivation and the initiative to adapt to new and unfamiliar environments. My year in industry has given me the teamwork and communication skills that are essential in the modern software development industry.
+I am a final year student who has a wide range of skills you are looking for in your advertised position. My degree has furnished me with a wide variety of technical knowledge, a high level of self-motivation, and the initiative to adapt to new and unfamiliar environments. My year in industry has given me the teamwork and communication skills that are essential in the modern software development industry.
 
-I have a wealth of experience in Java and object orientated programming with 
+I have a wealth of experience in Java and object orientated programming gained from my degree and my work experience respectively. I am more than proficient in MySQL databases and a good working knowledge of Linux environments and Apache web servers.
+
+I thank you for your time in considering my application and I hope to hear from you soon.
 
 \makeletterclosing
 
