--- a/aber/proffesional_issues/slj11_curriculum_vitae.tex
+++ b/aber/proffesional_issues/slj11_curriculum_vitae.tex
@@ -6,6 +6,9 @@
 \textwidth=6.0in
 \itemsep=0in
 \parsep=0in
+
+\pagenumbering{gobble}
+
 % if using pdflatex:
 %\setlength{\pdfpagewidth}{\paperwidth}
 %\setlength{\pdfpageheight}{\paperheight}
@@ -42,13 +45,13 @@ I am a fourth year undergraduate software engineering student at Aberystwyth uni
 
 \section{\sc Key Skills}
 
-{\bf Communication}: During my industrial placement I worked daily with customers who were technical experts in their field to realise their computing needs. As a practical demonstrator it was important to communicate technical content clearly with people who are less knowledgeable than myself. My experience as a student ambassador and staff-student committee member taught me to communicate ideas and opinion effectively to both staff and students.
+{\bf Communication}: During my industrial placement I worked daily with customers who were technical experts in their field to realise their computing needs. As a practical demonstrator it was important to communicate technical content clearly with people who are less knowledgeable than myself. My experience as a student ambassador and staff-student committee member taught me to communicate ideas and opinion effectively to both university faculty and students.
 
-{\bf Teamwork}: I've recently worked as part of a international, multi-skilled development team as part of my industrial placement. During my time I worked on many different projects involving different subsets of the team each with different skills and domain knowledge meet the project's goals. I completed a major group project as part of my degree which simulated a real world project where I took on the role of lead developer. I was successfully able to orchestrate the team to build a work end product.
+{\bf Teamwork}: I've recently worked as part of a international, multi-skilled development team as part of my industrial placement. During my time I worked on many different projects involving different subsets of the team's members to meet the project's goals. I completed a major group project as part of my degree which simulated a real world project where I took on the role of lead developer and was successfully able to orchestrate the team to build a working end product.
 
-{\bf Planning and Organisation:} On my placement year I was responsible for collaborating with customers on the design and implementation of an entire section of the project. I also responsible for redesigning one of the core features of the system, from requirements analysis through to implementation.
+{\bf Planning, Design and Organisation:} On my placement year I was responsible for collaborating with customers on the design and implementation of an entire section of the project. I also responsible for redesigning one of the core features of the system, from requirements analysis through to implementation.
 
-{\bf Technical Knowledge:} IY project was primarily written in C++ and my university's group project module was a Java web application using a MySQL database. During this year I create a RESTful client application from scratch for an internet applications assignment.
+{\bf Technical Knowledge:} My IY project was primarily written in C++ and my university's group project module was a Java web application using a MySQL database. During this year I created a RESTful client application from scratch for an internet applications assignment.
 
 \section{\sc Education}
 {\bf University of Aberystwyth}\\
@@ -74,14 +77,16 @@ Key Modules:
 \item Biology AS Level: B
 \end{list2}
 
-{\bf Dorcan Technology Collage}, Swindon, Wiltshire, UK \hfill {\it September 2003 - June 2008}\\
+\newpage
+{\bf Dorcan Technology Collage} \\
+{\it Swindon, Wiltshire, UK} \hfill {\it September 2003 - June 2008}\\
 10 GCSE's grades A*-C including Maths grade A and English grade A.
 
 \section{\sc Professional Experience}
 {\bf Software Developer, STFC} \\
 {\it Rutherford Appleton Laboratory, Harwell, Oxfordshire, UK}  \hfill {\it July, 2013 - August, 2014}
 
-I have recently been employed as a software developer for ISIS Neutron source based at Rutherford Appleton Laboratory in Harwell, Oxfordshire to develop the Mantid neutron and muon data analysis application. This project was primarily written in C++ and Python. I was primarily responsible for the development of the framework for indirect geometry instruments, but also helped develop the general framework during my time with the project. I was involved with every step of the development process from requirements gathering to design, through to implementation, testing, and maintenance. My original contract was extended so I could continue working through the summer before university began.
+I have recently been employed as part of an industrial year placement as a software developer for ISIS Neutron source. I was primarily responsible for the development of the data analysis framework for indirect geometry instruments, but also helped develop the general framework during my time with the project. I was involved with every step of the development process from requirements gathering to design, through to implementation, testing, and maintenance.
 
 {\bf Practical Demonstrator, University of Aberystwyth} \\
 {\it Aberystwyth, Ceredigion, Wales, UK} \hfill {\it  October, 2012 - June, 2013, September 2014 - Present}
