--- a/aber/proffesional_issues/slj11_curriculum_vitae.tex
+++ b/aber/proffesional_issues/slj11_curriculum_vitae.tex
@@ -41,17 +41,17 @@ Aberystwyth, SY23 3PU & {\it E-mail:}  slj11@aber.ac.uk & {\it Website:} samuelj
 \end{tabular}
 
 \section{\sc Profile}
-I am a fourth year undergraduate software engineering student at Aberystwyth university. I have already completed two years of my undergraduate with an average of a first. I have also recently finished an industrial placement year as a software engineer at the Science and Technology Facilities Council. In this role worked as part of an international development team to build a cutting edge data analysis application. I am now six months into the fourth year of my degree and have just started working on my dissertation project involving mammogram image analysis.
+I am a fourth year undergraduate software engineering student at Aberystwyth university currently on track for a first. I have recently finished an industrial placement year as a software engineer as part of an international development team to build a cutting edge data analysis application. I have just started working on my 4th year dissertation project involving developing a mobile image analysis app for android.
 
 \section{\sc Key Skills}
 
-{\bf Communication}: During my industrial placement I worked daily with customers who were technical experts in their field to realise their computing needs. As a practical demonstrator it was important to communicate technical content clearly with people who are less knowledgeable than myself. My experience as a student ambassador and staff-student committee member taught me to communicate ideas and opinion effectively to both university faculty and students.
+{\bf Communication}: During my industrial placement I worked daily with customers who were technical experts in their field to realise their computing needs. As a practical demonstrator it is important to communicate technical content clearly with people who are less knowledgeable than myself. My experience as a student ambassador and SSCC member taught me to communicate ideas and opinion effectively to both university faculty and students.
 
 {\bf Teamwork}: I've recently worked as part of a international, multi-skilled development team as part of my industrial placement. During my time I worked on many different projects involving different subsets of the team's members to meet the project's goals. I completed a major group project as part of my degree which simulated a real world project where I took on the role of lead developer and was successfully able to orchestrate the team to build a working end product.
 
 {\bf Planning, Design and Organisation:} On my placement year I was responsible for collaborating with customers on the design and implementation of an entire section of the project. I also responsible for redesigning one of the core features of the system, from requirements analysis through to implementation.
 
-{\bf Technical Knowledge:} My IY project was primarily written in C++ and my university's group project module was a Java web application using a MySQL database. During this year I created a RESTful client application from scratch for an internet applications assignment.
+{\bf Technical Knowledge:} My IY project was primarily written in C++ and my university's group project module was a Java web application, giving me a strong OO background. The group project was also built using a MySQL database. During this year I created a RESTful client application from scratch for an internet applications assignment.
 
 \section{\sc Education}
 {\bf University of Aberystwyth}\\
@@ -77,21 +77,25 @@ Key Modules:
 \item Biology AS Level: B
 \end{list2}
 
-\newpage
 {\bf Dorcan Technology Collage} \\
 {\it Swindon, Wiltshire, UK} \hfill {\it September 2003 - June 2008}\\
 10 GCSE's grades A*-C including Maths grade A and English grade A.
 
 \section{\sc Professional Experience}
+{\bf Practical Demonstrator, University of Aberystwyth} \\
+{\it Aberystwyth, Ceredigion, Wales, UK} \hfill {\it  October, 2012 - Present}
+
+I am currently employed as a practical demonstrator for Aberystwyth University helping to teach Java, C++, C and Haskell. This position sharpens my communication and technical skills as I must be able to confidently pass on my knowledge to others and explain complicated concepts clearly.
+
+{\bf Student Ambassador, University of Aberystwyth}\\ 
+{\it Aberystwyth, Ceredigion, Wales, UK} \hfill {\it August, 2012 - Present}
+
+I am currently volunteering to be an open day and visit day ambassador for the university. The role requires me to talk to prospective students and their families about what it is like to live and study in Aberystwyth. I am also responsible for giving tours of the computer science department and helping to get prospective students to talks and interviews conducted by the department on time.
+
 {\bf Software Developer, STFC} \\
 {\it Rutherford Appleton Laboratory, Harwell, Oxfordshire, UK}  \hfill {\it July, 2013 - August, 2014}
 
 I have recently been employed as part of an industrial year placement as a software developer for ISIS Neutron source. I was primarily responsible for the development of the data analysis framework for indirect geometry instruments, but also helped develop the general framework during my time with the project. I was involved with every step of the development process from requirements gathering to design, through to implementation, testing, and maintenance.
-
-{\bf Practical Demonstrator, University of Aberystwyth} \\
-{\it Aberystwyth, Ceredigion, Wales, UK} \hfill {\it  October, 2012 - June, 2013, September 2014 - Present}
-
-I am currently employed as a practical demonstrator for Aberystwyth University helping to teach Java, C++, C and Haskell. This position sharpens my communication and technical skills as I must be able to confidently pass on my knowledge to others and explain complicated concepts clearly.
 
 \section{\sc Honors and Awards}
 Glyn Emery prize for best first year student, University of Aberystwyth, 2012.
@@ -101,20 +105,15 @@ Glyn Emery prize for best first year student, University of Aberystwyth, 2012.
 \item Languages: Java, JavaScript, PHP, C++, Python, C, Haskell.
 \item Applications: Eclipse, Qt Designer.
 \item Tools: Git, CMake, GDB, Valgrind, \LaTeX.
-\item Libraries: Boost, Numpy, Scipy, scikit-learn, scikit-image, CxxTest, JUnit, Qt, JQuery.
+\item Libraries: JUnit, Qt, JQuery, Boost, Numpy, Scipy, scikit-learn, scikit-image, CxxTest.
 \item Operating Systems:  Unix/Linux, Mac OSX, and Windows.\\
 \end{list2}
 
 \section{\sc Volunteering}
 {\bf Student-Staff Consultative Committee Member} \\
-{\it University of Aberystwyth, Aberystwyth, Ceredigion, UK} \hfill {\it September 2014 - Present}
+{\it University of Aberystwyth, Aberystwyth, Ceredigion, UK} \hfill {\it September, 2014 - Present}
 
 Since my return to Aberystwyth I have volunteered to be a member of the staff-student consultative committee. This position has involved attending and contributing to regular committee meetings and aiding with student drop in sessions.
-
-{\bf Student Ambassador}\\ 
-{\it University of Aberystwyth, Aberystwyth, Ceredigion, UK} \hfill {\it August 2012 - Present}
-
-I am currently volunteering to be an open day and visit day ambassador for the university. The role requires me to talk to prospective students and their families about what it is like to live and study in Aberystwyth. I am also responsible for giving tours of the computer science department and helping to get prospective students to talks and interviews conducted by the department on time.
 
 \section{\sc Interests}
 In my free time I enjoy reading (mostly classics and science fiction) and playing tennis and squash. During my industrial year I got involved with the department's Aunt Sally team where we won the cup.
